--- a/index.html
+++ b/index.html
@@ -1,37 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>repl.it</title>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+	 crossorigin="anonymous">
 	</script>
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+	 crossorigin="anonymous">
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+	 crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+	 crossorigin="anonymous">
 	</script>
-    <script src="https://kit.fontawesome.com/37ae921784.js" crossorigin="anonymous"></script>
-	<title>Document</title>
+	<script src="https://kit.fontawesome.com/37ae921784.js" crossorigin="anonymous">
+	</script>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-	<!--header-->
+<body data-spy="scroll" data-target="#responsiveNavBar">
 
-	<header>
-		<div class="container">
-			<div class="hamburger-menu">
-				<i class="fas fa-bars toggle"></i>
-				<i class="fas fa-times toggle"></i>
-			</div>
-		</div>
-	</header>
+<!-- Start Home Section -->
+<div id="home">
 
+<!-- Navigation -->
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">MyJourney<img src="images/logo.png"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveNavBar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="responsiveNavBar">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#feature">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!-- End Navigation -->
+
+<!-- Start Landing Page Section -->
+<div class="landing">
+  <div class="home-wrap">
+    <div class="home-inner"></div>
+  </div>
+</div>
+
+<div class="caption text-center">
+  <h1>Discover the wonders of Portugal</h1>
+  <h3>Start your adventure with us today!</h3>
+  <a class="btn btn-outline-light btn-lg" href="#features">Let's Go</a>
+</div>
+
+<!-- End Landing Page Section -->
+
+</div>
+
+<!-- End Home Section -->
+
+<!-- Start About Section -->
+<div id="about" class="offset">
+
+</div>
+
+<!-- End About Section -->
+
+<!-- Start Features Section -->
+<div id="features" class="offset">
+
+</div>
+
+<!-- End Features Section -->
+
+<!-- Start Contact Section -->
+<div id="contact" class="offset">
+
+</div>
+
+<!-- End Contact Section -->
+
+
+	<script src="script.js"></script>
 </body>
 
 </html>
